# ai-transcribe

./: .gitignore  LICENSE  pyproject.toml
src/: diarize.py  identify.py  main.py  process.py  transcribe.py  vad.py
